working: post, get, delete, getUserComment

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 <button id="postComment">Post Comment</button>
 <button id="getComments">Get Comments</button>
 <button id="deleteComments">Delete All</button>
+<button id="getPersonComments">Get Comments by Name</button>
 <div id="json"></div>
 <div id="done"></div>
 <div id="comments"></div>
